--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -251,9 +251,9 @@
                 <div class="col-xs-5 text-left approved">
                   Approved P.O.
                 </div>
-                <div class="col-xs-7 text-right grn-note">
+                <!-- <div class="col-xs-7 text-right grn-note">
                   *GRN = Goods Receive Note
-                </div>
+                </div> -->
               </mat-panel-title>
             </mat-expansion-panel-header>
             <div class="example-container mat-elevation-z8">
@@ -296,7 +296,7 @@
                     <span class="p-r-10 display-inline-block p-t-5"><a href="javascript:void(0)" style="color: #f47721;"
                         [routerLink]="['./po-generate/', element.purchaseOrderId, 'view']">View P.O.</a></span>
                     <span class="p-r-10 display-inline-block p-t-5"><a href="javascript:void(0)" style="color: #f47721;"
-                        [routerLink]="['./view-grn/', element.purchaseOrderId]">Add/View GRN</a></span>
+                        [routerLink]="['./view-grn/', element.purchaseOrderId]">Add/View Receipts</a></span>
                     <span>&nbsp;</span>
                     <span class="p-r-10 cursor-pointer"><a (click)="openPaymentRecord(element)"
                         matTooltip="Payment Record"><img src="../../../../assets/images/trackpayment.svg" /></a></span>
