--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -144,7 +144,7 @@
               </div>
               <div class="font-size12 color-text-card p-l-15 p-t-5">
                 <div class="max-width-96 word-break-word">
-                  Open Indents
+                  Open Purchase Requisition
                 </div>
               </div>
             </div>
