--- a/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
+++ b/src/app/shared/dialogs/add-edit-grn/add-edit-grn-component.html
@@ -1,7 +1,7 @@
 <div class="header-add-edit-dialog p-r-0">
   <div class="row width-100">
     <div class="col-xs-10 col-sm-10">
-      <h1 mat-dialog-title>Add Good Receive Note</h1>
+      <h1 mat-dialog-title>Add Receipts</h1>
     </div>
     <div class="col-xs-2 col-sm-2">
       <button type="button" class="close pull-right p-t-5" (click)="closeDialog()" aria-label="Close">
@@ -61,7 +61,8 @@
             <!-- <input matInput type="number" placeholder="Quantity"> -->
 
             <mat-form-field [formGroupName]="i" class="border-input table-input">
-              <input matInput formControlName="certifiedQty" type="text" placeholder="Received Quantity" min="0" appTwoDigitDecimaNumber />
+              <input matInput formControlName="certifiedQty" type="text" placeholder="Received Quantity" min="0"
+                appTwoDigitDecimaNumber />
             </mat-form-field>
             <!-- {{ element.certifiedQuantity }} -->
           </td>
@@ -87,7 +88,8 @@
                   </div>
                   <div class="col-xs-4 col-md-4">
                     <mat-form-field [formGroupName]="i" class="border-input table-input add-grn-popup">
-                      <input matInput formControlName="certifiedQty" type="text" placeholder="Received Quantity" min="0" appTwoDigitDecimaNumber />
+                      <input matInput formControlName="certifiedQty" type="text" placeholder="Received Quantity" min="0"
+                        appTwoDigitDecimaNumber />
                     </mat-form-field>
                   </div>
                 </div>
@@ -116,11 +118,13 @@
 
     <div mat-dialog-actions>
       <div class="col-sm-12 save-btn-add-edit-user-modal">
-        <button mat-raised-button type="button" (click)="closeDialog()" class="main-background-color main-button color-white pull-left">
+        <button mat-raised-button type="button" (click)="closeDialog()"
+          class="main-background-color main-button color-white pull-left">
           Cancel
         </button>
 
-        <button mat-raised-button type="submit" class="main-background-color main-button color-white pull-right" [disabled]="!valueEntered()">
+        <button mat-raised-button type="submit" class="main-background-color main-button color-white pull-right"
+          [disabled]="!valueEntered()">
           Save
         </button>
       </div>
