--- a/src/app/features/po/po-documents/po-documents.component.html
+++ b/src/app/features/po/po-documents/po-documents.component.html
@@ -15,7 +15,7 @@
             <!-- <mat-icon>file_copy</mat-icon> -->
             <div class="col-x-10">
               <img class="file-icon" src="../../../../assets/images/file-doc.png" />
-              <span>{{ file.DocumentDesc }}</span>
+              <span class="overflow-anywhere">{{ file.DocumentDesc }}</span>
             </div>
             <div class="col-xs-2">
               <span class="show-download">
@@ -40,7 +40,7 @@
             <!-- <mat-icon>file_copy</mat-icon> -->
             <div class="col-x-9">
               <img class="file-icon" src="../../../../assets/images/file-doc.png" />
-              <span class="overflow-break">{{ file.documentName }}</span>
+              <span class="overflow-anywhere">{{ file.documentName }}</span>
             </div>
             <div class="col-xs-3">
               <span class="show-download">
