--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -331,3 +331,7 @@ s .validTill {
   white-space: normal !important;
   line-height: initial !important;
 }
+
+.overflow-anywhere {
+  overflow-wrap: anywhere !important;
+}
