--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -9,30 +9,23 @@
 
 <mat-accordion displayMode="flat" multi class="mat-table res-table"
   *ngIf="this.newMaterialData && this.newMaterialData.length > 0">
-  <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
-    <span class="mat-header-cell mat-header-cell maxwidth-20 material material-Name" mat-sort-header="name"
-      [ngClass]="isMobile ? 'text-center ml-1 mr-1' : '' ">Material
-      Name</span>
-    <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="estimatedQty"
-      [ngClass]="isMobile ? 'text-center ml-1 mr-1' : '' ">Estimated
-      Quantity</span>
-    <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="indentedQuantity"
-      [ngClass]="isMobile ? 'text-center ml-1 mr-1' : '' ">Indented
-      Quantity</span>
-    <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="requiredDate"
-      [ngClass]="isMobile ? 'text-center ml-1 mr-1' : '' ">Required
-      Date</span>
-    <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="deliveredQuantity"
-      [ngClass]="isMobile ? 'text-center ml-1 mr-1' : '' ">Delivered
-      Quantity</span>
-    <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="requestedQuantity"
-      [ngClass]="isMobile ? 'text-center' : '' ">Awarded
-      Quantity</span>
-    <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="availableQuantity"
-      [ngClass]="isMobile ? 'text-center' : '' ">Available
-      Stock</span>
-  </section>
   <div class="res-td">
+    <section matSort class="mat-elevation-z2 mat-header-row blue-background-color-color-white-section">
+      <span class="mat-header-cell mat-header-cell maxwidth-20 material material-Name" mat-sort-header="name"
+        [ngClass]="isMobile ? 'text-center pl-1 pr-1' : '' ">Material Name</span>
+      <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="estimatedQty"
+        [ngClass]="isMobile ? 'text-center' : '' ">Estimated Quantity</span>
+      <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="indentedQuantity"
+        [ngClass]="isMobile ? 'text-center' : '' ">Indented Quantity</span>
+      <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="requiredDate"
+        [ngClass]="isMobile ? 'text-center' : '' ">Required Date</span>
+      <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="deliveredQuantity"
+        [ngClass]="isMobile ? 'text-center' : '' ">Delivered Quantity</span>
+      <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="requestedQuantity"
+        [ngClass]="isMobile ? 'text-center' : '' ">Awarded Quantity</span>
+      <span class="mat-header-cell mat-header-cell maxwidth-20 material" mat-sort-header="availableQuantity"
+        [ngClass]="isMobile ? 'text-center' : '' ">Available Stock</span>
+    </section>
     <mat-expansion-panel
       *ngFor="let material of newMaterialData | SearchPipe: searchMaterial:'GlobalMaterial':'materialName'"
       class="myPanel">
