--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -335,3 +335,8 @@ s .validTill {
 .overflow-anywhere {
   overflow-wrap: anywhere !important;
 }
+
+.mpo-table{
+  width: 100%;
+  overflow-x: scroll;
+}
