--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -133,7 +133,7 @@
           <div class="col-xs-6  col-sm-4 col-md-3  display-material-indent-po-box">
             <div class="box-custom color-text-card p-t-10 cursor-pointer  display-flex showOpenIndents"
               (click)="redirectToOpenIndentCount(projectDetails.projectId, projectDetails)"
-              matTooltip="View All Indents">
+              matTooltip="View All Open Purchase Requisition">
               <div class="font-size20 text-bold">
                 <span *ngIf="!projectDetails.openIndentCount" class="max-width-96 word-break-word">
                   0
