--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -340,3 +340,17 @@ s .validTill {
   width: 100%;
   overflow-x: scroll;
 }
+
+.txt-nwrp{
+  white-space: normal !important;
+  font-weight: normal !important;
+}
+
+.mpo-mh{
+  height: 30px;
+  padding-top: 10px !important;
+}
+
+.mpo-mh{
+  height: 30px;
+}
