--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -28,7 +28,7 @@
 
         <div class="row text-align-center three-months-signup-text">
           <div class="col-sm-12 p-t-5 p-b-15">
-            <div class="font-signup">
+            <div class="font-signup" *ngIf="this.callingCode === '+91'">
               You will be charged a monthly subscription fee of INR 9999 after your three months free trial period ends. <br />
               This is an introductory offer for the first year of your purchase only.
             </div>
