--- a/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
+++ b/src/app/features/rfq-supplier-template/rfq-supplier-add-address/rfq-supplier-add-address.component.html
@@ -50,14 +50,23 @@
               </div>
 
               <div class="col-sm-6">
-                <mat-form-field class="border-input add-edit-user-form-modal">
-                  <input matInput type="text" placeholder="GST No" formControlName="gstNo" required />
-                  <!-- <mat-error class="mat-error-add-edit-form-modal">contactNo is Required</mat-error> -->
-                  <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
-                    class="form-error-msg"> GST No is required </small>
-                  <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
-                    class="form-error-msg"> Enter Valid GST No</small>
-                </mat-form-field>
+                <ng-container *ngIf="isInternational === 0; else noInt">
+                  <mat-form-field class="border-input add-edit-user-form-modal">
+                    <input matInput type="text" placeholder="GST No" formControlName="gstNo" required />
+                    <!-- <mat-error class="mat-error-add-edit-form-modal">contactNo is Required</mat-error> -->
+                    <small *ngIf="form.controls['gstNo'].hasError('required') && form.controls['gstNo'].touched"
+                      class="form-error-msg"> GST No is required </small>
+                    <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
+                      class="form-error-msg"> Enter Valid GST No</small>
+                  </mat-form-field>
+                </ng-container>
+                <ng-template #noInt>
+                  <mat-form-field class="border-input add-edit-user-form-modal">
+                    <input matInput type="text" placeholder="GST No" formControlName="gstNo" />
+                    <small *ngIf="form.controls['gstNo'].hasError('pattern') && form.controls['gstNo'].touched"
+                      class="form-error-msg"> Enter Valid GST No</small>
+                  </mat-form-field>
+                </ng-template>
               </div>
 
             </div>
