--- a/src/app/features/first-login/update-info/update-info.component.html
+++ b/src/app/features/first-login/update-info/update-info.component.html
@@ -112,7 +112,7 @@
                   </div>
                 </div>
 
-                <mat-form-field *ngIf="users.roleName != 'l3'" class="border-input w-100">
+                <mat-form-field *ngIf="users.roleName === 'l1'" class="border-input w-100">
                   <input matInput type="text" placeholder="Pincode" formControlName="orgPincode" />
                 </mat-form-field>
                 <mat-error *ngIf="userInfoForm.controls['orgPincode'].errors?.max && userInfoForm.controls['orgPincode'].touched">
@@ -146,7 +146,7 @@
                 <mat-error *ngIf="userInfoForm.controls['turnOverId'].errors && (userInfoForm.controls['turnOverId'].dirty || userInfoForm.controls['turnOverId'].touched)">
                   <mat-error *ngIf="userInfoForm.controls['turnOverId'].hasError('required')">Annual Turn over is required</mat-error>
                 </mat-error>
-                <div class="row height12Percent m-t-10 border-round p-t-5 full-border-main width-70">
+                <div *ngIf="users.roleName === 'l1'" class="row height12Percent m-t-10 border-round p-t-5 full-border-main width-70">
                   <div class="col-xs-6 p-t-10 color-grey text-semi-bold p-r-0 font-size">Base Currency</div>
                   <div class="col-xs-6 p-l-0">
                     <mat-form-field class="width-90 border-select mat-form-field-infix-padding dropdown-padding mat-form-field-flex-mm-padding">
