--- a/src/app/shared/dialogs/payment-record/paymentRecord.component.html
+++ b/src/app/shared/dialogs/payment-record/paymentRecord.component.html
@@ -138,7 +138,7 @@
             <ng-container matColumnDef="Exchange Rate">
               <th mat-header-cell *matHeaderCellDef class="text-align-center">Exchange Rate</th>
               <td mat-cell *matCellDef="let element" class="text-align-center">
-                {{ element.exchangeValue }}
+                {{ element.exchangeRate }}
               </td>
             </ng-container>
 
